style.css
html {
  margin: 0;
  padding: 0;
  scroll-snap-type: mandatory;
  scroll-snap-points-y: repeat(300px);
  scroll-snap-type: y mandatory;
}


#panelWrap {
  height: 100vh;
  scroll-snap-align: start;
}

section {
  background-color: #F5EFE8;
  height: 100%;
  color: #14191D;
  display: flex;
  align-items: center;
  scroll-snap-align: start;
}

* {
  box-sizing: border-box;
}

.col-md-5{
  z-index: 2;
}

.col-md-7{
  z-index: 1;
}

.navbar{
  position: fixed;
  z-index: 3;
  font-family: Silka, Arial, sans-serif;
  width: 100vw;
  padding: 10px 20px;
}


/* Typo */

.display-1 {
  font-family: Joane-SemiBold, Arial, sans-serif;
  font-size: calc(1.625rem + 3.7vw);
  line-height: 1.2;
  padding-bottom: 20px;
}

h2 {
  font-family: Silka, Arial, sans-serif;
  font-weight: 400;
  font-size: 1.5em;
  line-height: 1.4;
}

h3 {
  font-family: Silka, Arial, sans-serif;
  font-size: 1.2em;
}

h4 {
  font-family: Silka, Arial, sans-serif;
  padding: 20px 0px;
}

p {
  font-family: Silka, Arial, sans-serif;
  font-size: 1.2em;
  line-height: 1.5;
}

button {
  outline: 0;
  margin-top: 20px;
  background: none;
  text-transform: uppercase;
  border: 1.5px solid #14191D;
  padding: 16px 20px;
  color: #14191D;
  font-family: Silka, Arial, sans-serif;
  font-size: 1.2em;
  transition: all 0.1s ease;
}
  
button:hover {
    
  background: #14191D;
  color: #F5EFE8;
  cursor: pointer;
}

.site-footer{
  background-color: #14191D;
  width: 100%;
}

.footer-info {
  font-family: Silka, Arial, sans-serif;
  font-size: 1.2em;
  color: #F5EFE8;
  line-height: 1.4;
  list-style-type: none;
  text-decoration: none;
  padding-left: 8vw;
  padding-top: 2vw;
}


/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (max-width: 768px) {
  .animation {
  padding: 40px;
}
}

